tests/fixtures/invalid/bool_lshift_dict.py
# Cannot left shift Bool and Dict[str, int]
x: bool = True << {"a": 1}
